okhttp-client-extensions 1.1 refactor
Removed dependencies on guava and apache-commons.